--- a/src/App.css
+++ b/src/App.css
@@ -12,15 +12,18 @@ img {
   border-radius: 4px;
   padding: 5px;
   margin: -55px 0 50px -50px;
-  height: 290px;
-  width: 290px;
+  height: 65%;
+  width: 155%;
+  position: relative;
 }
 h3 {
   font-weight: bolder;
 }
 p {
-  font-weight: bold;
   margin-bottom: 1px;
+}
+p .text-inline {
+  font-weight: 100;
 }
 ul {
   list-style-type: none;
@@ -80,6 +83,8 @@ ul {
 .column1 {
   float: left;
   width: 20%;
+  height: 100%;
+  position: relative;
   padding: 50px;
   border: 1px solid grey;
   border-radius: 4px;
