--- a/src/App.css
+++ b/src/App.css
@@ -12,18 +12,22 @@ img {
   border-radius: 4px;
   padding: 5px;
   margin: -55px 0 50px -50px;
-  height: 65%;
-  width: 155%;
-  position: relative;
+  height: 55%;
+  width: 100%;
+  position: absolute;
 }
-h3 {
+.left-container {
+  padding-top: 250px;
+}
+h3 .name {
   font-weight: bolder;
+  margin-left: 20px;
+  position: absolute;
+  align-content: center;
+  margin-bottom: 10px;
 }
 p {
   margin-bottom: 1px;
-}
-p .text-inline {
-  font-weight: 100;
 }
 ul {
   list-style-type: none;
@@ -60,15 +64,16 @@ ul {
 }
 
 .editor {
-  margin-top: 5px;
+  margin-top: 50px;
   margin-left: -10px;
+  position: absolute;
 }
 .editor a {
   float: left;
   color: blue;
   text-align: center;
   padding-bottom: 10px;
-  padding-left: 14px;
+  padding-left: 40px;
   text-decoration: underline;
   font-size: 12px;
 }
@@ -83,17 +88,18 @@ ul {
 .column1 {
   float: left;
   width: 20%;
-  height: 100%;
-  position: relative;
+  height: 10;
   padding: 50px;
   border: 1px solid grey;
   border-radius: 4px;
   margin: 20px 0 0 40px;
+  position: relative;
 }
 .column2 {
   float: left;
   width: 67%;
   padding: 10px;
+  position: relative;
 }
 .nav-active:global(.active) {
   text-decoration: underline;
@@ -192,4 +198,8 @@ form {
 input[type="submit"] {
   margin-left: 140px;
   text-align: center;
+}
+.inline {
+  display: inline-block;
+  margin-right: 4px;
 }
