--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+body {
+  margin-top: -100px;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -32,8 +34,8 @@ p {
 ul {
   list-style-type: none;
 }
+
 .App-header {
-  background-color: white;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -151,17 +153,24 @@ ul {
   border-radius: 0 20px 20px 20px;
   padding-bottom: 0px;
 }
+.edit-scroll {
+  overflow-y: scroll;
+  height: 500px;
+}
 
 /* tab nav area */
 .flex-column .nav-item {
   border-radius: 20px 0 0 20px;
   text-align: center;
-  background-color: grey;
+  background-color: #ffffff;
+  color: #ffffff;
 }
 .flex-column .nav-item :global(.active) {
-  background-color: #dce5f2;
+  background-color: #ffffff;
   color: black;
   border-radius: 20px 0 0 20px;
+  outline: none !important;
+  text-decoration: underline;
 }
 
 .container {
@@ -196,12 +205,13 @@ ul {
 }
 
 .tab-content {
-  background-image: url(./images/leaf.jpg);
+  background-image: url(./images/doctors_blured.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
 }
+
 .appName {
   font-size: 30px;
   text-align: right;
@@ -224,4 +234,40 @@ input[type="submit"] {
 .inline {
   display: inline-block;
   margin-right: 4px;
+}
+label {
+  /* Other styling... */
+  text-align: right;
+  clear: both;
+  float: left;
+  margin-right: 15px;
+  font-weight: bold;
+}
+.btn {
+  margin-bottom: 11%;
+  margin-right: 5px;
+  float: right;
+}
+.btn-toolbar {
+  float: right;
+  margin-right: 2%;
+}
+.login-button {
+  background-color: #007bff;
+  color: white;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 10px 24px;
+}
+.login-button:hover {
+  background-color: #007bff;
+  color: white;
+}
+.episodes {
+  background-image: url(./images/doctors_blured.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
